# cci-tools

./: .gitignore  README.md  collections.html  genindex.html  index.html  objects.inv  openeo.html  opensearch.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  shell.html  source.html  tools.html
_modules/: index.html
_sources/: collections.rst.txt  index.rst.txt  openeo.rst.txt  opensearch.rst.txt  shell.rst.txt  source.rst.txt  tools.rst.txt
cci_tools/: add_opensearch_location.py  build_cci_collections.py  cci-opensearch-ecv-parser-1.py  collection_build.py  create_kerchunk_records.py  delete_collections.py  find_collection_holes.py  shell.py  test_argparse.py  update_collection.py  utils.py
cci_tools/archive/: create_openeo_collection.py
cci_tools/cli/: add_collection.py  add_opensearch_location.py  build_cci_collections.py  collection_item_count.py  collection_summary.py  confine_collection.py  create_stac.py  delete_collections.py  find_latest.py  geo2cog.py  locate_obs.py  manual_collection.py  migrate_collection.py  openeo_aggregation.py  post_stac.py  service_sweep.py
cci_tools/collection/: main.py  openeo.py  utils.py
cci_tools/core/: utils.py
cci_tools/create_cci_stac_records/: create_cci_stac_record.py  create_cci_stac_records.py  list_stac_dirs_to_post.py  post_cci_stac_record.py  post_cci_stac_records.py  requirements.txt  run_latest_cci_versions.py
cci_tools/elasticsearch/: queries.py  switch_backups.py
cci_tools/openeo/: record.py
cci_tools/readers/: file.py  geotiff.py  s3.py  xarray.py
cci_tools/stac/: create_record.py  post_record.py
config/: cci_ecv_config.json  projects.json
docs/source/: collections.rst  conf.py  index.rst  openeo.rst  tools.rst
openeo/: splitter.json
openeo/collections/: esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged.6-0.100m-fv5.01.openeo.json  esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged.6-0.100m-fv6.0.openeo.json  esacci.fire.mon.l3s.ba.msi-(sentinel-2).sentinel-2a.msi.2-0.pixel.openeo.json  esacci.lc.5-yrs.l4.map.multi-sensor.multi-platform.hrlc10-a02.v1-2.amazonia.openeo.json  esacci.lc.yr.l4.map.multi-sensor.multi-platform.hrlc30-a03.v1-2.siberia.openeo.json
openeo/inputs/: biomass_diff_2010_2007.csv  biomass_diffset.csv  esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.6-0.100m-fv5.01.openeo.csv  esacci.BIOMASS.yr.L4.AGB.multi-sensor.multi-platform.MERGED.6-0.100m-fv6.0.openeo.csv  fire.csv  fire_patch.csv  hrlc.csv  icesheets.csv  landcover.csv
openeo/live_collections/: esacci-l3s_fire-ba-avhrr-ltdr-fv1.1.openeo.json  esacci-l3s_fire-ba-meris-fv04.1.openeo.json  esacci-l3s_fire-ba-syn-fv1.0.openeo.json  esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged-diff-100m-2010-2007-fv6.0.openeo.json  esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged-diff-100m-2016-2015-fv6.0.openeo.json  esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged-diff-100m-2017-2016-fv6.0.openeo.json  esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged-diff-100m-2018-2017-fv6.0.openeo.json  esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged-diff-100m-2019-2018-fv6.0.openeo.json  esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged-diff-100m-2020-2010-fv6.0.openeo.json  esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged-diff-100m-2020-2019-fv6.0.openeo.json  esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged-diff-100m-2021-2020-fv6.0.openeo.json  esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged-diff-100m-2022-2021-fv6.0.openeo.json  esacci.biomass.yr.l4.agb.multi-sensor.multi-platform.merged.6-0.100m-fv6.0.openeo.json  (+6 more)
stac_collections/: cci.json  item.json  openeo.json  template.json
tests/: asset_load.py  fast_record_fix.py  geo2cog.py  get_records.py  opensearch_files_corrections.py  pystac_load.py
(+53 files in other folders)
