[project]
name = "cci-tools"
version = "0.1.0"
description = "Package containing many cci scripts in the tools folder"
authors = [
    {name = "Daniel Westwood",email = "daniel.westwood@stfc.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "argparse (>=1.4,<2.0)",
    "requests (>=2.32.4,<3.0.0)",
    "urllib3 (>=2.5,<3.0)",
    "httpx (>=0.28,<0.29)",
    "xarray (>=2024,<2025)",
    "pystac-client (<=0.8.4)",
    "rasterio (>=1.4.3,<2.0.0)",
    "rio-cogeo (>=5.4.2,<6.0.0)",
    "elasticsearch (>=9.1.0,<10.0.0)",
    "httpx-auth (>=0.23.1,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
# Delete collections
delete_collections = "cci_tools.delete_collections:main"

# Run STAC general commands with client
stac_shell = "cci_tools.shell:main"

# Update individual collections
update_collection = "cci_tools.update_collection:main"

# Create STAC records for cci
create_items = "cci_tools.create_cci_stac_records.create_cci_stac_records:main"

# Post cached STAC items to cci STAC API
post_items = "cci_tools.create_cci_stac_records.post_cci_stac_records:main"
