[project]
name = "cci-tools"
version = "0.1.0"
description = "Package containing many cci scripts in the tools folder"
authors = [
    {name = "Daniel Westwood",email = "daniel.westwood@stfc.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "urllib3 (>=2.5,<3.0)",
    "xarray (>=2024.3.0,<2025)",
    "rioxarray (>=0.17.0,<1)",
    "pystac-client (>=0.8.4,<1)",
    "rasterio (>=1.4.3,<2.0.0)",
    "rio-cogeo (>=5.4.2,<6.0.0)",
    "elasticsearch (>=7,<9)",
    "httpx-auth (>=0.23.1,<0.24.0)",
    "openeo (>=0.43.0,<1)",
    "openeo-pg-parser-networkx (>=2024.10.1,<2026)",
    "openeo-processes-dask (>=2025.7.1,<2026)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
# Delete collections
delete_collections = "cci_tools.cli.delete_collections:main"

# Run STAC general commands with client
stac_shell = "cci_tools.shell:main"

# Update individual collections
update_collection = "cci_tools.update_collection:main"

# Create Openeo collection
create_openeo = "cci_tools.cli.openeo_aggregation:main"

# Create STAC/OpenEO records for cci
create_items = "cci_tools.cli.create_stac:main"

# Post cached STAC items to cci STAC API
post_items = "cci_tools.cli.post_stac:main"

# Confine collections
confine = "cci_tools.cli.confine_collection:main"

# Find latest versions of files under a directory
find_latest = "cci_tools.cli.find_latest:main"

# Convert Geotiff to cog
geo2cog = "cci_tools.cli.geo2cog:main"

# Count Items in a collection
count_items = "cci_tools.cli.collection_item_count:main"

# Migrate a collection
migrate_collection = "cci_tools.cli.migrate_collection:main"